# Bychin-Qt-simple-calculator

./: CMakeLists.txt  README.md  mainwindow.cpp  ui_mainwindow.h
